--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <h1 class="group-title">Stealth Dragons</h1>
         </nav>
         <nav>
-            <ul class="nav">
-                <li class="nav-item"> <a class="nav-link" href="#">Jiarui</a>
-                </li>
+            <ul class="nav" id="right-nav">
                 <li class="nav-item"> <a class="nav-link" href="#">Sam</a>
+                </li>
+                <li class="nav-item"> <a class="nav-link" href="#">Jiarui</a>
                 </li>
             </ul>
         </nav>
@@ -50,7 +50,8 @@
                 </li>
             </ul>
         </nav>
-        <label for="nav-toggler" class="nav-toggler-icon"><img src="/resources/Hamburger_icon_white.svg" alt="expand/collapse menu"></label>
+        <label for="nav-toggler" class="nav-toggler-icon"><img src="/resources/Hamburger_icon_white.svg"
+                alt="expand/collapse menu"></label>
     </header>
 </body>
 
