--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                 </li>
             </ul>
         </nav>
-        <nav class="group"><img id="dragon-logo" src="/resources/stealth-dragon-logo.png" alt="Stealth Dragon">
-            <h1 class="group-title">Stealth Dragons</h1>
+        <nav class="group"><img id="SD-logo" src="/resources/Stealth-Dragons-Logo.svg" alt="Stealth Dragon">
         </nav>
         <nav>
             <ul class="nav" id="right-nav">
@@ -53,6 +52,70 @@
         <label for="nav-toggler" class="nav-toggler-icon"><img src="/resources/Hamburger_icon_white.svg"
                 alt="expand/collapse menu"></label>
     </header>
+
+
+
+    <section id="group-intro">
+        <h2 class="members">Group Members</h2>
+        <div class="group-photos">
+            <div class="member-photo">
+                <img src="" class="head-shot" alt="Aaryaman Thuloj">
+            </div>
+            <div class="member-photo">
+                <img src="/resources/SD-Cian.jpg" class="head-shot" alt="Cian Howell">
+            </div>
+            <div class="member-photo">
+                <img src="" class="head-shot" alt="Jiarui Lu">
+            </div>
+            <div class="member-photo">
+                <img src="" class="head-shot" alt="Sam Leung">
+            </div>
+        </div>
+        <div class="group-photos">
+            <div>
+                <p class="member-name">Aaryaman Thuloj</p>
+                <p class="member-bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, beatae nihil,
+                    fugit itaque voluptatem ab exercitationem facilis ipsum omnis quo animi voluptates unde, cupiditate
+                    quae
+                    asperiores! Totam ab minima quas?</p>
+                    <a class="PP-link" href="#">Link to personal page</a>
+            </div>
+            <div>
+                <p class="member-name">Cian Howell</p>
+                <p class="member-bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, beatae nihil,
+                    fugit itaque voluptatem ab exercitationem facilis ipsum omnis quo animi voluptates unde, cupiditate
+                    quae
+                    asperiores! Totam ab minima quas?</p>
+                    <a class="PP-link" href="#">Link to personal page</a>
+            </div>
+            <div>
+                <p class="member-name">Jiarui Lu </p>
+                <p class="member-bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, beatae nihil,
+                    fugit itaque voluptatem ab exercitationem facilis ipsum omnis quo animi voluptates unde, cupiditate
+                    quae
+                    asperiores! Totam ab minima quas?</p>
+                    <a class="PP-link" href="#">Link to personal page</a>
+            </div>
+            <div>
+                <p class="member-name">Sam Leung</p>
+                <p class="member-bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, beatae nihil,
+                    fugit itaque voluptatem ab exercitationem facilis ipsum omnis quo animi voluptates unde, cupiditate
+                    quae
+                    asperiores! Totam ab minima quas?</p>
+                    <a class="PP-link" href="#">Link to personal page</a>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="group-projects">
+        <h3 class="projects">
+            Projects
+        </h3>
+
+    </section>
+
+
 </body>
 
 </html>
