Done with basic formatting
Needs content and much refinement.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     fugit itaque voluptatem ab exercitationem facilis ipsum omnis quo animi voluptates unde, cupiditate
                     quae
                     asperiores! Totam ab minima quas?</p>
-                    <a class="PP-link" href="#">Link to personal page</a>
+                <a class="PP-link" href="#">Link to personal page</a>
             </div>
             <div>
                 <p class="member-name">Cian Howell</p>
@@ -86,7 +86,7 @@
                     fugit itaque voluptatem ab exercitationem facilis ipsum omnis quo animi voluptates unde, cupiditate
                     quae
                     asperiores! Totam ab minima quas?</p>
-                    <a class="PP-link" href="#">Link to personal page</a>
+                <a class="PP-link" href="#">Link to personal page</a>
             </div>
             <div>
                 <p class="member-name">Jiarui Lu </p>
@@ -94,7 +94,7 @@
                     fugit itaque voluptatem ab exercitationem facilis ipsum omnis quo animi voluptates unde, cupiditate
                     quae
                     asperiores! Totam ab minima quas?</p>
-                    <a class="PP-link" href="#">Link to personal page</a>
+                <a class="PP-link" href="#">Link to personal page</a>
             </div>
             <div>
                 <p class="member-name">Sam Leung</p>
@@ -102,7 +102,7 @@
                     fugit itaque voluptatem ab exercitationem facilis ipsum omnis quo animi voluptates unde, cupiditate
                     quae
                     asperiores! Totam ab minima quas?</p>
-                    <a class="PP-link" href="#">Link to personal page</a>
+                <a class="PP-link" href="#">Link to personal page</a>
             </div>
         </div>
 
@@ -112,10 +112,61 @@
         <h3 class="projects">
             Projects
         </h3>
-
+        <div class="project-1">
+            <div>
+                <h4 class="project-title">DateBase</h4>
+                <img class="project-screenshot" src="/resources/DateBase-Project.png" alt="DateBase Landing Page">
+                <a href="">Link to Project</a>
+            </div>
+            <div>
+                <p class="project-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed nesciunt, quisquam
+                    omnis illo
+                    asperiores vel temporibus velit cupiditate quos numquam, earum aut recusandae deleniti amet totam
+                    eius distinctio neque! Ducimus, dignissimos enim distinctio atque praesentium unde, quaerat corrupti
+                    animi dolorum at deleniti nobis hic consequuntur libero quo veritatis nihil delectus harum! Quis
+                    necessitatibus provident vel. Sit maiores nisi non voluptates excepturi consectetur labore. Quis
+                    vero reprehenderit iure fugiat soluta repellat accusantium placeat. Dignissimos magnam quaerat quam
+                    doloribus corporis quae nesciunt?</p>
+            </div>
+        </div>
+        <div class="project-2">
+            <div>
+                <p class="project-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed nesciunt, quisquam
+                    omnis illo
+                    asperiores vel temporibus velit cupiditate quos numquam, earum aut recusandae deleniti amet totam
+                    eius distinctio neque! Ducimus, dignissimos enim distinctio atque praesentium unde, quaerat corrupti
+                    animi dolorum at deleniti nobis hic consequuntur libero quo veritatis nihil delectus harum! Quis
+                    necessitatibus provident vel. Sit maiores nisi non voluptates excepturi consectetur labore. Quis
+                    vero reprehenderit iure fugiat soluta repellat accusantium placeat. Dignissimos magnam quaerat quam
+                    doloribus corporis quae nesciunt?</p>
+            </div>
+            <div>
+                <h4 class="project-title">Qti.ai</h4>
+                <img class="project-screenshot" src="/resources/Qti-Project.png" alt="DateBase Landing Page">
+                <a href="">Link to Project</a>
+            </div>
+        </div>
+        <div class="project-3">
+            <div>
+                <h4 class="project-title">Project 3</h4>
+                <img class="project-screenshot" src="/resources/DateBase-Project.png" alt="DateBase Landing Page">
+                <a href="">Link to Project</a>
+            </div>
+            <div>
+                <p class="project-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed nesciunt, quisquam
+                    omnis illo
+                    asperiores vel temporibus velit cupiditate quos numquam, earum aut recusandae deleniti amet totam
+                    eius distinctio neque! Ducimus, dignissimos enim distinctio atque praesentium unde, quaerat corrupti
+                    animi dolorum at deleniti nobis hic consequuntur libero quo veritatis nihil delectus harum! Quis
+                    necessitatibus provident vel. Sit maiores nisi non voluptates excepturi consectetur labore. Quis
+                    vero reprehenderit iure fugiat soluta repellat accusantium placeat. Dignissimos magnam quaerat quam
+                    doloribus corporis quae nesciunt?</p>
+            </div>
+        </div>
     </section>
+    <footer id="footer">
 
-
+    </footer>
 </body>
 
 </html>
