Formatting and personal info added
Code formatting updated, and personal information added

--- a/index.html
+++ b/index.html
@@ -1,172 +1,206 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
-<head>
+  <head>
     <!--meta tags-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, intial-scale=1" />
     <meta name="description" content="Landing page for the Stealth Dragons" />
     <!--CSS and Fonts-->
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <title>The Stealth Dragons</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!--Navigation Bar-->
     <header class="navbar">
-        <nav>
-            <ul class="nav">
-                <li class="nav-item"> <a class="nav-link" href="#">Aaryaman</a>
-                </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Cian</a>
-                </li>
-            </ul>
-        </nav>
-        <nav class="group"><img id="SD-logo" src="/resources/Stealth-Dragons-Logo.svg" alt="Stealth Dragon">
-        </nav>
-        <nav>
-            <ul class="nav" id="right-nav">
-                <li class="nav-item"> <a class="nav-link" href="#">Sam</a>
-                </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Jiarui</a>
-                </li>
-            </ul>
-        </nav>
-        <!--Did not know how to do this without js here is the source https://www.youtube.com/watch?v=8QKOaTYvYUA&t=902s-->
-        <input type="checkbox" id="nav-toggler" class="nav-toggler">
-        <nav class="nav-data">
-            <ul class="mobile-nav">
-                <li class="nav-item"> <a class="nav-link" href="#">Aaryaman</a>
-                </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Cian</a>
-                </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Jiarui</a>
-                </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Sam</a>
-                </li>
-            </ul>
-        </nav>
-        <label for="nav-toggler" class="nav-toggler-icon"><img src="/resources/Hamburger_icon_white.svg"
-                alt="expand/collapse menu"></label>
+      <nav>
+        <ul class="nav">
+          <li class="nav-item"><a class="nav-link" href="#">Aaryaman</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Cian</a></li>
+        </ul>
+      </nav>
+      <nav class="group">
+        <img
+          id="SD-logo"
+          src="/resources/Stealth-Dragons-Logo.svg"
+          alt="Stealth Dragon"
+        />
+      </nav>
+      <nav>
+        <ul class="nav" id="right-nav">
+          <li class="nav-item"><a class="nav-link" href="#">Sam</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Jiarui</a></li>
+        </ul>
+      </nav>
+      <!--Did not know how to do this without js here is the source https://www.youtube.com/watch?v=8QKOaTYvYUA&t=902s-->
+      <input type="checkbox" id="nav-toggler" class="nav-toggler" />
+      <nav class="nav-data">
+        <ul class="mobile-nav">
+          <li class="nav-item"><a class="nav-link" href="#">Aaryaman</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Cian</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Jiarui</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Sam</a></li>
+        </ul>
+      </nav>
+      <label for="nav-toggler" class="nav-toggler-icon"
+        ><img
+          src="/resources/Hamburger_icon_white.svg"
+          alt="expand/collapse menu"
+      /></label>
     </header>
 
-
-
     <section id="group-intro">
-        <h2 class="members">Group Members</h2>
-        <div class="group-photos">
-            <div class="member-photo">
-                <img src="" class="head-shot" alt="Aaryaman Thuloj">
-            </div>
-            <div class="member-photo">
-                <img src="/resources/SD-Cian.jpg" class="head-shot" alt="Cian Howell">
-            </div>
-            <div class="member-photo">
-                <img src="" class="head-shot" alt="Jiarui Lu">
-            </div>
-            <div class="member-photo">
-                <img src="" class="head-shot" alt="Sam Leung">
-            </div>
+      <h2 class="members">Group Members</h2>
+      <div class="group-photos">
+        <div class="member-photo">
+          <img
+            src="/resources/AaryamanHeadshot.jpeg"
+            class="head-shot"
+            alt="Aaryaman Thuloj"
+          />
         </div>
-        <div class="group-photos">
-            <div>
-                <p class="member-name">Aaryaman Thuloj</p>
-                <p class="member-bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, beatae nihil,
-                    fugit itaque voluptatem ab exercitationem facilis ipsum omnis quo animi voluptates unde, cupiditate
-                    quae
-                    asperiores! Totam ab minima quas?</p>
-                <a class="PP-link" href="#">Link to personal page</a>
-            </div>
-            <div>
-                <p class="member-name">Cian Howell</p>
-                <p class="member-bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, beatae nihil,
-                    fugit itaque voluptatem ab exercitationem facilis ipsum omnis quo animi voluptates unde, cupiditate
-                    quae
-                    asperiores! Totam ab minima quas?</p>
-                <a class="PP-link" href="#">Link to personal page</a>
-            </div>
-            <div>
-                <p class="member-name">Jiarui Lu </p>
-                <p class="member-bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, beatae nihil,
-                    fugit itaque voluptatem ab exercitationem facilis ipsum omnis quo animi voluptates unde, cupiditate
-                    quae
-                    asperiores! Totam ab minima quas?</p>
-                <a class="PP-link" href="#">Link to personal page</a>
-            </div>
-            <div>
-                <p class="member-name">Sam Leung</p>
-                <p class="member-bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, beatae nihil,
-                    fugit itaque voluptatem ab exercitationem facilis ipsum omnis quo animi voluptates unde, cupiditate
-                    quae
-                    asperiores! Totam ab minima quas?</p>
-                <a class="PP-link" href="#">Link to personal page</a>
-            </div>
+        <div class="member-photo">
+          <img
+            src="/resources/SD-Cian.jpg"
+            class="head-shot"
+            alt="Cian Howell"
+          />
         </div>
-
+        <div class="member-photo">
+          <img src="" class="head-shot" alt="Jiarui Lu" />
+        </div>
+        <div class="member-photo">
+          <img src="" class="head-shot" alt="Sam Leung" />
+        </div>
+      </div>
+      <div class="group-photos">
+        <div>
+          <p class="member-name">Aaryaman Thuloj</p>
+          <p class="member-bio">
+            Sophomore CS & ITWS dual major with interests in software and web
+            development. Previously interned at Liberty Mutual Insurance in the
+            summer of 2022, working with software development and data analysis.
+            Excited to learn more!
+          </p>
+          <a class="PP-link" href="#">Link to personal page</a>
+        </div>
+        <div>
+          <p class="member-name">Cian Howell</p>
+          <p class="member-bio">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt,
+            beatae nihil, fugit itaque voluptatem ab exercitationem facilis
+            ipsum omnis quo animi voluptates unde, cupiditate quae asperiores!
+            Totam ab minima quas?
+          </p>
+          <a class="PP-link" href="#">Link to personal page</a>
+        </div>
+        <div>
+          <p class="member-name">Jiarui Lu</p>
+          <p class="member-bio">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt,
+            beatae nihil, fugit itaque voluptatem ab exercitationem facilis
+            ipsum omnis quo animi voluptates unde, cupiditate quae asperiores!
+            Totam ab minima quas?
+          </p>
+          <a class="PP-link" href="#">Link to personal page</a>
+        </div>
+        <div>
+          <p class="member-name">Sam Leung</p>
+          <p class="member-bio">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt,
+            beatae nihil, fugit itaque voluptatem ab exercitationem facilis
+            ipsum omnis quo animi voluptates unde, cupiditate quae asperiores!
+            Totam ab minima quas?
+          </p>
+          <a class="PP-link" href="#">Link to personal page</a>
+        </div>
+      </div>
     </section>
 
     <section id="group-projects">
-        <h3 class="projects">
-            Projects
-        </h3>
-        <div class="project-1">
-            <div>
-                <h4 class="project-title">DateBase</h4>
-                <img class="project-screenshot" src="/resources/DateBase-Project.png" alt="DateBase Landing Page">
-                <a href="">Link to Project</a>
-            </div>
-            <div>
-                <p class="project-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed nesciunt, quisquam
-                    omnis illo
-                    asperiores vel temporibus velit cupiditate quos numquam, earum aut recusandae deleniti amet totam
-                    eius distinctio neque! Ducimus, dignissimos enim distinctio atque praesentium unde, quaerat corrupti
-                    animi dolorum at deleniti nobis hic consequuntur libero quo veritatis nihil delectus harum! Quis
-                    necessitatibus provident vel. Sit maiores nisi non voluptates excepturi consectetur labore. Quis
-                    vero reprehenderit iure fugiat soluta repellat accusantium placeat. Dignissimos magnam quaerat quam
-                    doloribus corporis quae nesciunt?</p>
-            </div>
+      <h3 class="projects">Projects</h3>
+      <div class="project-1">
+        <div>
+          <h4 class="project-title">DateBase</h4>
+          <img
+            class="project-screenshot"
+            src="/resources/DateBase-Project.png"
+            alt="DateBase Landing Page"
+          />
+          <a href="">Link to Project</a>
         </div>
-        <div class="project-2">
-            <div>
-                <p class="project-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed nesciunt, quisquam
-                    omnis illo
-                    asperiores vel temporibus velit cupiditate quos numquam, earum aut recusandae deleniti amet totam
-                    eius distinctio neque! Ducimus, dignissimos enim distinctio atque praesentium unde, quaerat corrupti
-                    animi dolorum at deleniti nobis hic consequuntur libero quo veritatis nihil delectus harum! Quis
-                    necessitatibus provident vel. Sit maiores nisi non voluptates excepturi consectetur labore. Quis
-                    vero reprehenderit iure fugiat soluta repellat accusantium placeat. Dignissimos magnam quaerat quam
-                    doloribus corporis quae nesciunt?</p>
-            </div>
-            <div>
-                <h4 class="project-title">Qti.ai</h4>
-                <img class="project-screenshot" src="/resources/Qti-Project.png" alt="DateBase Landing Page">
-                <a href="">Link to Project</a>
-            </div>
+        <div>
+          <p class="project-desc">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
+            nesciunt, quisquam omnis illo asperiores vel temporibus velit
+            cupiditate quos numquam, earum aut recusandae deleniti amet totam
+            eius distinctio neque! Ducimus, dignissimos enim distinctio atque
+            praesentium unde, quaerat corrupti animi dolorum at deleniti nobis
+            hic consequuntur libero quo veritatis nihil delectus harum! Quis
+            necessitatibus provident vel. Sit maiores nisi non voluptates
+            excepturi consectetur labore. Quis vero reprehenderit iure fugiat
+            soluta repellat accusantium placeat. Dignissimos magnam quaerat quam
+            doloribus corporis quae nesciunt?
+          </p>
         </div>
-        <div class="project-3">
-            <div>
-                <h4 class="project-title">Project 3</h4>
-                <img class="project-screenshot" src="/resources/DateBase-Project.png" alt="DateBase Landing Page">
-                <a href="">Link to Project</a>
-            </div>
-            <div>
-                <p class="project-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed nesciunt, quisquam
-                    omnis illo
-                    asperiores vel temporibus velit cupiditate quos numquam, earum aut recusandae deleniti amet totam
-                    eius distinctio neque! Ducimus, dignissimos enim distinctio atque praesentium unde, quaerat corrupti
-                    animi dolorum at deleniti nobis hic consequuntur libero quo veritatis nihil delectus harum! Quis
-                    necessitatibus provident vel. Sit maiores nisi non voluptates excepturi consectetur labore. Quis
-                    vero reprehenderit iure fugiat soluta repellat accusantium placeat. Dignissimos magnam quaerat quam
-                    doloribus corporis quae nesciunt?</p>
-            </div>
+      </div>
+      <div class="project-2">
+        <div>
+          <p class="project-desc">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
+            nesciunt, quisquam omnis illo asperiores vel temporibus velit
+            cupiditate quos numquam, earum aut recusandae deleniti amet totam
+            eius distinctio neque! Ducimus, dignissimos enim distinctio atque
+            praesentium unde, quaerat corrupti animi dolorum at deleniti nobis
+            hic consequuntur libero quo veritatis nihil delectus harum! Quis
+            necessitatibus provident vel. Sit maiores nisi non voluptates
+            excepturi consectetur labore. Quis vero reprehenderit iure fugiat
+            soluta repellat accusantium placeat. Dignissimos magnam quaerat quam
+            doloribus corporis quae nesciunt?
+          </p>
         </div>
+        <div>
+          <h4 class="project-title">Qti.ai</h4>
+          <img
+            class="project-screenshot"
+            src="/resources/Qti-Project.png"
+            alt="DateBase Landing Page"
+          />
+          <a href="">Link to Project</a>
+        </div>
+      </div>
+      <div class="project-3">
+        <div>
+          <h4 class="project-title">Project 3</h4>
+          <img
+            class="project-screenshot"
+            src="/resources/DateBase-Project.png"
+            alt="DateBase Landing Page"
+          />
+          <a href="">Link to Project</a>
+        </div>
+        <div>
+          <p class="project-desc">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
+            nesciunt, quisquam omnis illo asperiores vel temporibus velit
+            cupiditate quos numquam, earum aut recusandae deleniti amet totam
+            eius distinctio neque! Ducimus, dignissimos enim distinctio atque
+            praesentium unde, quaerat corrupti animi dolorum at deleniti nobis
+            hic consequuntur libero quo veritatis nihil delectus harum! Quis
+            necessitatibus provident vel. Sit maiores nisi non voluptates
+            excepturi consectetur labore. Quis vero reprehenderit iure fugiat
+            soluta repellat accusantium placeat. Dignissimos magnam quaerat quam
+            doloribus corporis quae nesciunt?
+          </p>
+        </div>
+      </div>
     </section>
-    <footer id="footer">
-
-    </footer>
-</body>
-
+    <footer id="footer"></footer>
+  </body>
 </html>
