--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
         </div>
     </section>
-    <footer id="footer"></footer>
+    <footer id="footer"><p class="group-slogan">Slogan</p></footer>
 </body>
 
 </html>
