--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div>
                 <p class="member-name">Cian Howell</p>
                 <p class="member-bio">
-                    Junior ITWS major with a entrepreneurship focus track. Experience doing front-end web development
+                    Junior ITWS major with an entrepreneurship focus track. Experience doing front-end web development
                     for multiple companies. Interested in product management and full stack development.
                 </p>
                 <a class="P-link" href="#">Link to personal page</a>
