--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <img src="/resources/SD-Cian.jpg" class="head-shot" alt="Cian Howell" />
       </div>
       <div class="member-photo">
-        <img src="" class="head-shot" alt="Sam Leung" />
+        <img src="/resources/samzoompic.jpg" class="head-shot" alt="Sam Leung" />
       </div>
     </div>
     <div class="group-photos">
