--- a/resources/resumes/leungs2.html
+++ b/resources/resumes/leungs2.html
@@ -5,7 +5,7 @@
         Samuel Leung
     </title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="../../style.css" />
+    <link rel="stylesheet" type="text/css" href="../style.css" />
 </head>
 <body>
     <h1>
@@ -16,7 +16,7 @@
         <br />
         (516)-853-6507
         <br />
-        leungs2@rpi.edu
+            <a class="u email" href="mailto:leungs2@rpi.edu">leungs2@rpi.edu</a>
     </h2>
     <p>    
         ITWS undergraduate student looking for some experience in web development
