--- a/resources/resumes/leungs2.html
+++ b/resources/resumes/leungs2.html
@@ -5,19 +5,22 @@
         Samuel Leung
     </title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="../../style.css" />
+    <link rel="stylesheet" type="text/css" href="../style.css" />
 </head>
 <body>
-    <h1>
-        Samuel Leung
-    </h1>
-        <h2>
-        126 Wentworth Ave Albertson NY, 11507
+    <div class="h-card">
+        <h1 class="leungs2-title">
+            <span class="p-name">Samuel Leung</span>
+        </h1>
+        <div class="p-street-address">126 Wentworth Ave</div>
+        <span class="locality">Albertson</span>
+        <abbr class="region" title="New York">NY</abbr>
+        <span class="p-postal-code">11507</span>
         <br />
-        (516)-853-6507
+        <div class="p-tel">(516)-853-6507</div>
         <br />
-        leungs2@rpi.edu
-    </h2>
+        <a class="u-email" href="mailto:leungs2@rpi.edu">leungs2@rpi.edu</a>
+    </div>
     <p>    
         ITWS undergraduate student looking for some experience in web development
     </p>
