--- a/resources/resumes/leungs2.html
+++ b/resources/resumes/leungs2.html
@@ -96,7 +96,7 @@
         <li>Quick Learning</li>
         <li>Tech Savvy</li>
     </ul>
-    <img src="../samzoompic.jpg"
+    <img src="/resources/samzoompic.jpg"
          alt="Samuel Leung" />
 </body>
 </html>
