--- a/index.html
+++ b/index.html
@@ -142,21 +142,19 @@
     <div class="project-3">
       <div>
         <h4 class="project-title">Project 3</h4>
-        <img class="project-screenshot" src="/resources/DateBase-Project.png" alt="DateBase Landing Page" />
+        <img class="project-screenshot" src="/resources/DOITWS.png" alt="DO ITWS Landing Page" />
         <a class="P-link" href="">Link to Project</a>
       </div>
       <div>
         <p class="project-desc">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
-          nesciunt, quisquam omnis illo asperiores vel temporibus velit
-          cupiditate quos numquam, earum aut recusandae deleniti amet totam
-          eius distinctio neque! Ducimus, dignissimos enim distinctio atque
-          praesentium unde, quaerat corrupti animi dolorum at deleniti nobis
-          hic consequuntur libero quo veritatis nihil delectus harum! Quis
-          necessitatibus provident vel. Sit maiores nisi non voluptates
-          excepturi consectetur labore. Quis vero reprehenderit iure fugiat
-          soluta repellat accusantium placeat. Dignissimos magnam quaerat quam
-          doloribus corporis quae nesciunt?
+          This project's goal was to create a comfortable and user friendly
+          planner webpage. The goal was to allow stressed high schoolers and 
+          college students to have an easily navigatable and simple interface
+          to keep track of their assignments and tests. The interface allowed
+          users to simply input their assignment details, the due date, and 
+          their priority listing for the assignment. The website would then
+          order the assignments based on priority and then due date and guide
+          users in which assignments they should complete first.
         </p>
       </div>
     </div>
